--- a/facedetector/build.gradle
+++ b/facedetector/build.gradle
@@ -21,6 +21,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        main {
+            jniLibs.srcDir(['libs'])
+        }
+    }
 
 }
 
